crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__core__list_empty_store.snap
---
source: crates/engram-cli/tests/cli/snapshot/core.rs
expression: "f.run(&[\"list\"])"
---
$ engramdb --no-maintenance --dir [PROJECT] list
exit: 0
--- stdout ---
[]
--- stderr ---
