crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__core__list_limited.snap
---
source: crates/engram-cli/tests/cli/snapshot/core.rs
expression: "f.run(&[\"list\", \"-n\", \"2\"])"
---
$ engramdb --no-maintenance --dir [PROJECT] list -n 2
exit: 0
--- stdout ---
[
  {
    "created_at": "[TIMESTAMP]",
    "criticality": 0.9,
    "epistemic": "decision",
    "id": "[UUID]",
    "physical": [
      "/"
    ],
    "status": "Active",
    "summary": "Use Rust for the backend",
    "type": "decision",
    "updated_at": "[TIMESTAMP]",
    "visibility": "Shared"
  },
  {
    "created_at": "[TIMESTAMP]",
    "criticality": 0.6,
    "epistemic": "fact",
    "id": "[UUID]",
    "physical": [
      "/"
    ],
    "status": "Active",
    "summary": "Name variables in snake_case",
    "type": "convention",
    "updated_at": "[TIMESTAMP]",
    "visibility": "Shared"
  }
]
--- stderr ---
