crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__core__list_on_uninitialized_store_fails.snap
---
source: crates/engram-cli/tests/cli/snapshot/core.rs
expression: "f.run(&[\"list\"])"
---
$ engramdb --no-maintenance --dir [PROJECT] list
exit: 1
--- stdout ---
--- stderr ---
Error: Project not initialized
